[tool.poetry]
name = "python-snake-case-to-camel-case"
version = "0.1.0"
description = ""
authors = ["Andy Jimenez Reyes <wasosky313@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
fastapi-camelcase = "^2.0.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
